# SamuCTuring

./: CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  README.md  SamuBrain.cpp  SamuBrain.h  SamuLife.pro  SamuQl.h  main.cpp  orchmach1.hpp  tm.cpp
